[package]
name = "tokio-minidb"
version = "0.1.0"
authors = ["Julian Tescher <jatescher@gmail.com>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
nom = "^3.2"
num_cpus = "1.7.0"

minidb-bench = { path = "minidb-bench" }

[workspace]
